applications/approvalProcesses/objects/DLObj1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DLObj1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>AutorabitExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DLObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DLObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>